Indicate that stages overlap